feat: add mixed movie and show lists
